# fmi

.github/workflows/: cmake-multi-platform.yml
lfa/tema1/: .gitignore  CMakeLists.txt  DFA.cpp  DFA.h  Makefile  NFA.cpp  NFA.h  README.md  example_nfa.txt  utils.cpp  utils.h
lfa/tema2/: main.py  postfix_to_nfa.py
poo/tema1/: CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  TransitionMap.cpp  TransitionMap.h  build.bat  build.sh  main.cpp  utils.cpp  utils.h
sd/seminar_tema3/: evaluare.py  happy_number.md  linked_list_cycle.md  stiva_cu_2_cozi.md  stpar.py  substring_with_concatenation_of_words.py
